[package]
name = "memhack"
version = "0.1.0"
authors = ["Jakobzs <31919330+Jakobzs@users.noreply.github.com>"]
edition = "2018"
description = "A memory hacking library"
license = "MIT"
repository = "https://github.com/memhack/memhack"

[dependencies]
bindings = { package = "windows_bindings", path = "windows_bindings" }
sysinfo = "0.17.0"