[package]
name = "memhack"
version = "0.1.0"
authors = ["Jakobzs <31919330+Jakobzs@users.noreply.github.com>"]
edition = "2018"
description = "A memory hacking library"
license = "MIT"
repository = "https://github.com/memhack/memhack"

[dependencies]
sysinfo = "0.23.0"
num_cpus = "1.13"

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug"
]