[package]
name = "dll_hello_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
memhack = { path= "../../" }

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_System_SystemServices"
]