[package]
name = "dll_injector"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memhack = { path= "../../" }
sysinfo = "0.23"

[dependencies.windows]
version = "0.32.0"
features = [
    "Win32_System_Memory",
    "Win32_Security"
]